# PythonTasks

./: .gitignore  README.md  get.bash  get.bat  pyproject.toml
files-interactions/: get.bash
src/: .gitignore  __main__.py  code_browser.css  new_file.py  open_tasks.py  parse.py
src/examples/PW20/: __main__.py
src/examples/PW21/: __main__.py
src/examples/PW22/: __main__.py
src/examples/PW23/: __main__.py
src/examples/PW24/: __main__.py
src/examples/PW25/: __main__.py
src/examples/PW26/: __main__.py
src/examples/PW27/: __main__.py
src/examples/PW29/: __main__.py
src/examples/PW30/: __main__.py
src/examples/PW31/: __main__.py
src/examples/PW32/: __main__.py
src/examples/PW33/: __main__.py
src/examples/PW35/: __main__.py
src/examples/PW36/: __main__.py
src/examples/PW37/: __main__.py
src/examples/PW38/: __main__.py
src/examples/PW39/: __main__ .py
src/tasks/PW19/: __main__.py
src/tasks/PW20/: __main__.py
src/tasks/PW21/: __main__.py
src/tasks/PW22/: __main__.py
src/tasks/PW23/: __main__.py
src/tasks/PW24/: __main__.py
src/tasks/PW25/: __main__.py
src/tasks/PW26/: __main__.py
src/tasks/PW27/: __main__.py
src/tasks/PW28/: __main__.py
src/tasks/PW29/: __main__.py
src/tasks/PW30/: __main__.py
src/tasks/PW31/: __main__.py
src/tasks/PW32/: __main__.py
src/tasks/PW33/: __main__.py
src/tasks/PW35/: __main__.py
src/tasks/PW36/: __main__.py
src/tasks/PW37/: __main__.py
src/tasks/PW38/: __main__.py
src/tasks/PW39/: __main__.py
Файли взаємодії/: crete_new_file.bash  crete_new_file.bat  get.bat
(+9 files in other folders)
