[tool.poetry]
name = "pythontasks"
version = "0.1.0"
description = ""
authors = ["salko-ua <chips69jamil69game@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
console-menu = "^0.8.0"
keyboard = "^0.13.5"
psutil = "^7.0.0"
textual = "^2.1.1"
textual-terminal = "^0.3.0"
pyinstaller = "^6.5.0"
translate = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
